--- a/src/modules/addPatient/screens/addPatient.css
+++ b/src/modules/addPatient/screens/addPatient.css
@@ -6,10 +6,16 @@
 }
 
 .formContainer {
-  width: 300px;
+  width: 500px;
   text-align: center;
   display: flex;
   flex-direction: column;
+}
+
+.insideForm {
+  display: flex;
+  flex-direction: column;
+  padding-left: 15px;
 }
 
 .header {
