--- a/src/modules/patientList/screens/patientList.css
+++ b/src/modules/patientList/screens/patientList.css
@@ -11,7 +11,12 @@
 }
 
 .root {
-  display: 'flex';
-  flexWrap: 'wrap';
-  justifyContent: 'space-around';
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+	display: flex;
+	flex-direction: column;
+  margin: 20px;
 }
