--- a/src/modules/addPatient/screens/addPatient.css
+++ b/src/modules/addPatient/screens/addPatient.css
@@ -1,8 +1,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   border-style: solid;
   border-width: 1px;
   padding: 10px;
@@ -21,4 +19,16 @@
 .subContainer {
   display: flex;
   flex-direction: row;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+}
+
+.link {
+  font-size: 20px;
 }
